UPDATED: book controller with roles authorization